# POC_utf8proc

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.sh  utils.hpp
data/codepoint/: codepoint.txt
data/language/: chinese.txt  english.txt  greek.txt  japanese.txt  korean.txt  vietnamese.txt
